--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,9 @@ server.error.include-binding-errors=always
 
 spring.jpa.database=POSTGRESQL
 spring.sql.init.platform=org.hibernate.dialect.PostgreSQL9Dialect
-spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.url=jdbc:postgresql://udagramdev.cw6hnssvhtdo.sa-east-1.rds.amazonaws.com:5432/udagramdev
+spring.datasource.username=udagramdev
+spring.datasource.password=udagramdev
 spring.jpa.show-sql=true
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.properties.hibernate.default_schema=public
